some problem  fix on overflow issuue

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,8 +1,6 @@
-html,
 body {
   padding: 0;
   margin: 0;
-  overflow: visible;
 }
 
 @tailwind base;
